Misc./Deployments/YAMLs/DEV/amsapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amsapi-service
  namespace: aksmph-dev
spec:
  selector:
    app: amsapi-pod
  ports:
  - port: 80    
  type: ClusterIP
