Misc./Deployments/YAMLs/DEV/aksmph-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aksmph-ingress
  namespace: cio-poc-dev
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"    
spec:  
  rules:    
  - http:
      paths:
      - path: /cio/dev?(.*)
        backend:
          serviceName: cioapi-service
          servicePort: 80
